--- a/_posts/2024-06-28-wishlist.md
+++ b/_posts/2024-06-28-wishlist.md
@@ -1,34 +1,42 @@
-## Problem
+---
+title: I made a wishlist (and so should you)
+categories:
+  - blog
+tags:
+  - life
+excerpt: asd
+---
+
+## Frugal vs Cheap
 The older I get the more I fall in love with high quality products.
-Seems like I learned [the difference between being frugal and cheap](https://www.quora.com/What-is-the-difference-between-being-frugal-and-being-cheap-What-does-being-frugal-entail) in my late 20s.
+Seems like I learned [the difference between being frugal and cheap][frugal-quora] in my late 20s.
 
 I switched to an iPhone after finishing my studies and never went back after running on an Google Nexus phone for a long time. A lesson learned: Build quality does matter. Not saying the nexus was bad, not at all, I liked it, but an iPhone is *different*.
 
 More often I catch myself really thinking deep about new purchases. Do I *really* need this? I often use psychological tricks like putting things in my shopping cart (e.g., on amazon) and let it lay there till the end of the week. Then my mind could wander, think and ultimately conclude, if I need it or not.
 
 For instance we had one of the first vacuum robots from roborock at home. It did its job, but it had its flaws.
-Last month we upgraded to the [Roborock Q Revo Pro](google.com). Which was expensive, but totally worth it. And my wife loves it, which is a great bonus (she was fiddling with all the settings and set up different schedules).
-## Cause
+Last month we upgraded to the [Roborock Q Revo Pro][roborock-qrevo-pro]. Which was expensive, but totally worth it. And my wife loves it, which is a great bonus (she was fiddling with all the settings and set up different schedules).
+
+## I am that kind of guy
 People ask me about investments and gadgets all the time. The more I think about it, the more I am confused why. Maybe I seem like a type of guy who really thinks this kind of stuff through?!
 
 Also, every time Christmas or my birthday comes around my family is asking what I am wishing for.
 Coming up with something spontaneously is always quite stressful for me, so I default to answering *"just gift money"*. Which makes me feel a bit guilty, as I know this is not really a personal gift and returns the stress back to them, as they now need to answer the question of how much money is appropriate.
 
-## Solution
-For this I created a [wishlist](google.com/sheets). It is a simple google sheet (have I told you I worked in Finance?).
+## Google Sheets to the rescue!
+For this I created a [wishlist][sheet]. It is a simple google sheet (have I told you I worked in Finance?).
 Every time I come across a product or have an idea for a nice gift I add it to this list.
 When Christmas or my birthday comes around I just respond with the published version of said sheet.
 
-*HERE a picture of Jeremy Clarkson*
+![clarkson](/assets/images/clarkson-446278247.jpg)
 
 I love organizing my life like that. It is a small thing that really helps to stay focused.
-
-If you are interested what currently is on my list: [Here you go!](google.com)
-
+If you are interested what I have on my list currently: [Here you go!][sheet]
 
 
 
-## Links:
-
-https://www.quora.com/What-is-the-difference-between-being-frugal-and-being-cheap-What-does-being-frugal-entail
+[roborock-qrevo-pro]: https://global.roborock.com/pages/roborock-q-revo-pro
+[sheet]: https://docs.google.com/spreadsheets/d/e/2PACX-1vTimD8u5vjlBm5HmrBQd-KuTvvfbANQs5dQC0i4mJFFbxTKiwMGRUAd1tb4nUCYff8mn9wErs9fblGJ/pubhtml
+[frugal-quora]: https://www.quora.com/What-is-the-difference-between-being-frugal-and-being-cheap-What-does-being-frugal-entail
 
