fix goal meme img path

--- a/_posts/2024-09-17-goals-2024.md
+++ b/_posts/2024-09-17-goals-2024.md
@@ -12,7 +12,7 @@ I plan to start a series [year-in-review][year-review-wiki] where I plan to look
 
 **Do not think I came up with my yearly goals in late September. I had this done in January on vacation and wrote all of it down in a note on my phone.**
 
-![new-year-new-goals](../assets/images/goals.jpg)
+![new-year-new-goals](/assets/images/goals.jpg)
 
 
 # Goals
